--- a/elasticsearch/service.yaml
+++ b/elasticsearch/service.yaml
@@ -2,7 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: elasticsearch
-  namespace: elk
+  namespace: elasticsearch
   labels:
     app: elasticsearch
 spec:
