--- a/flux-system/kustomization.yaml
+++ b/flux-system/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
+- git-myapp.yaml
 patchesStrategicMerge:
   - flux-system-patch.yaml
