--- a/nfs-provisioner/helm.yaml
+++ b/nfs-provisioner/helm.yaml
@@ -67,7 +67,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: nfs-subdir-external-provisioner
-    namespace: default
+    namespace: nfs
 roleRef:
   kind: ClusterRole
   name: nfs-subdir-external-provisioner-runner
