--- a/nfs-provisioner/serviceaccount.yaml
+++ b/nfs-provisioner/serviceaccount.yaml
@@ -9,3 +9,4 @@ metadata:
     heritage: Helm
     release: nfs-subdir-external-provisioner
   name: nfs-subdir-external-provisioner
+  namespace: nfs
