--- a/elasticsearch/statefulset.yaml
+++ b/elasticsearch/statefulset.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: elasticsearch-logging
-  namespace: kube-system
+  namespace: elasticsearch
   labels:
     k8s-app: elasticsearch-logging
 spec:
