--- a/elasticsearch/rbac.yaml
+++ b/elasticsearch/rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: elasticsearch-logging
-  namespace: kube-system
+  namespace: elasticsearch
   labels:
     k8s-app: elasticsearch-logging
 ---
