--- a/elasticsearch/statefulset.yaml
+++ b/elasticsearch/statefulset.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       serviceAccountName: elasticsearch-logging
       containers:
-      - image: elasticsearch:6.8.4
+      - image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
         name: elasticsearch-logging
         ports:
         - containerPort: 9200
