--- a/nfs-provisioner/helm.yaml
+++ b/nfs-provisioner/helm.yaml
@@ -136,7 +136,7 @@ spec:
       serviceAccountName: nfs-subdir-external-provisioner
       containers:
         - name: nfs-subdir-external-provisioner
-          image: "rsnyder1118/nfs-subdir-external-provisioner:latest"
+          image: "rsnyder1118/nfs-subdir-external-provisioner:v3.1.0-k8s1.11-01"
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: nfs-subdir-external-provisioner-root
