--- a/nfs-provisioner/helm.yaml
+++ b/nfs-provisioner/helm.yaml
@@ -21,7 +21,7 @@ metadata:
     heritage: Helm
     release: nfs-subdir-external-provisioner
   name: nfs-client
-provisioner: cluster.local/nfs-subdir-external-provisioner
+provisioner: nfs-client-provisioner
 allowVolumeExpansion: true
 reclaimPolicy: Delete
 parameters:
@@ -136,14 +136,14 @@ spec:
       serviceAccountName: nfs-subdir-external-provisioner
       containers:
         - name: nfs-subdir-external-provisioner
-          image: "rsnyder1118/nfs-subdir-external-provisioner:v3.1.0-k8s1.11-01"
+          image: "rsnyder1118/nfs-subdir-external-provisioner:v3.1.0-k8s1.11-02"
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: nfs-subdir-external-provisioner-root
               mountPath: /persistentvolumes
           env:
             - name: PROVISIONER_NAME
-              value: cluster.local/nfs-subdir-external-provisioner
+              value: nfs-client-provisioner
             - name: NFS_SERVER
               value: 192.168.2.3
             - name: NFS_PATH
