--- a/elk/elasticsearch/statefulset.yaml
+++ b/elk/elasticsearch/statefulset.yaml
@@ -38,9 +38,9 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-      volumes:
-      - name: elasticsearch-logging
-          mountPath: /usr/share/elasticsearch/data
+      # volumes:
+      # - name: elasticsearch-logging
+      #   mountPath: /usr/share/elasticsearch/data
       initContainers:
       - image: alpine:3.6
         command: ["/sbin/sysctl", "-w", "vm.max_map_count=262144"]
