--- a/elk/elasticsearch/serviceaccount.yaml
+++ b/elk/elasticsearch/serviceaccount.yaml
@@ -3,6 +3,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: elasticsearch-logging
-  namespace: kube-system
+  namespace: elk
   labels:
     k8s-app: elasticsearch-logging
