--- a/elk/elasticsearch/statefulset.yaml
+++ b/elk/elasticsearch/statefulset.yaml
@@ -21,7 +21,8 @@ spec:
     spec:
       serviceAccountName: elasticsearch-logging
       containers:
-      - image: elasticsearch:6.8.4
+      # - image: elasticsearch:6.8.4
+      - image: docker.elastic.co/elasticsearch/elasticsearch:7.9.3-arm64
         name: elasticsearch-logging
         ports:
         - containerPort: 9200
