--- a/elk/elasticsearch/statefulset.yaml
+++ b/elk/elasticsearch/statefulset.yaml
@@ -22,7 +22,7 @@ spec:
       serviceAccountName: elasticsearch-logging
       containers:
       # - image: elasticsearch:6.8.4
-      - image: docker.elastic.co/elasticsearch/elasticsearch:7.9.3-arm64
+      - image: webhippie/elasticsearch:5.6
         name: elasticsearch-logging
         ports:
         - containerPort: 9200
