--- a/elk/logstash/deployment.yaml
+++ b/elk/logstash/deployment.yaml
@@ -18,7 +18,8 @@ spec:
     spec:
       containers:
       - name: logstash
-        image: docker.elastic.co/logstash/logstash:6.3.0
+        # image: docker.elastic.co/logstash/logstash:6.3.0
+        image: ind3x/rpi-logstash
         ports:
         - containerPort: 5044
         volumeMounts:
