--- a/elk/elasticsearch/statefulset.yaml
+++ b/elk/elasticsearch/statefulset.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       serviceAccountName: elasticsearch-logging
       containers:
-      - image: wep4you/logstash:7.9.2
+      - image: arslanakhtar61/logstash:7.9.3
       # - image: webhippie/elasticsearch:5.6
         name: elasticsearch-logging
         ports:
