--- a/elk/logstash/deployment.yaml
+++ b/elk/logstash/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
       - name: logstash
         # image: docker.elastic.co/logstash/logstash:6.3.0
-        image: ind3x/rpi-logstash
+        image: arslanakhtar61/logstash:7.9.3
         ports:
         - containerPort: 5044
         volumeMounts:
