--- a/elk/filebeat/daemonset.yaml
+++ b/elk/filebeat/daemonset.yaml
@@ -11,7 +11,9 @@ spec:
     metadata:
       labels:
         k8s-app: filebeat
-
+    selector:
+      matchLabels:
+        k8s-app: filebeat
     spec:
       serviceAccountName: filebeat
       terminationGracePeriodSeconds: 30
