--- a/elk/filebeat/daemonset.yaml
+++ b/elk/filebeat/daemonset.yaml
@@ -7,6 +7,9 @@ metadata:
   labels:
     k8s-app: filebeat
 spec:
+  selector:
+    matchLabels:
+      k8s-app: filebeat
   template:
     metadata:
       labels:
