--- a/elk/filebeat/daemonset.yaml
+++ b/elk/filebeat/daemonset.yaml
@@ -21,7 +21,8 @@ spec:
       containers:
       - name: filebeat
         # image: docker.elastic.co/beats/filebeat:6.8.4
-        image:  robfaber/filebeat:v7.5.2-arm
+        # image:  robfaber/filebeat:v7.5.2-arm
+        image: jmb12686/filebeat:v7.7.1
         args: [
           "-c", "/etc/filebeat.yml",
           "-e",
