--- a/elk/elasticsearch/service.yaml
+++ b/elk/elasticsearch/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: elasticsearch
+  name: elasticsearch-logging
   namespace: elk
   labels:
     k8s-app: elasticsearch-logging
