--- a/elk/filebeat/clusterrolebinding.yaml
+++ b/elk/filebeat/clusterrolebinding.yaml
@@ -6,7 +6,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: filebeat
-  namespace: kube-system
+  namespace: elk
 roleRef:
   kind: ClusterRole
   name: filebeat
