--- a/elk/kibana/deployment.yaml
+++ b/elk/kibana/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         # image: docker.elastic.co/kibana/kibana-oss:6.8.4
         image: jmb12686/kibana:v7.7.1
         env:
-        - name: ELASTICSEARCH_HOSTS
+        - name: ELASTICSEARCH_URL
           value: http://elasticsearch-logging:9200
         - name: CLUSTER_NAME
           value: elasticsearch-logging      
