--- a/elk/elasticsearch/statefulset.yaml
+++ b/elk/elasticsearch/statefulset.yaml
@@ -22,7 +22,8 @@ spec:
       serviceAccountName: elasticsearch-logging
       containers:
       # - image: elasticsearch:6.8.4
-      - image: webhippie/elasticsearch:6.4
+      # - image: webhippie/elasticsearch:6.4
+      - image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2-arm64
         name: elasticsearch-logging
         ports:
         - containerPort: 9200
